@@ -1,3 +1,7 @@
+2009-11-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-06-08
+        * Updates to PPM monitoring.
+
 2009-11-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-06-07
         * Updates to PPM monitoring mainly.
